# llm-text-classifier

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: export.py  train.py
src/: __init__.py  config.py
src/api/: __init__.py  main.py  schemas.py
src/data/: __init__.py  augmentation.py  dataset.py  loaders.py  preprocessor.py
src/inference/: __init__.py  engine.py  exporter.py
src/model/: __init__.py  classifier.py  losses.py  metrics.py
src/training/: __init__.py  callbacks.py  trainer.py
tests/: test_api.py  test_data.py  test_inference.py
